<resources>
    <string name="app_name">UI Components</string>

    <string name="hint1">Enter your Name</string>
    <string name="hint2">Enter your Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="telugu">Telugu</string>
    <string name="feature">Feature</string>
    <string name="submit">Submit</string>

    <string-array name="country_list">
        <item>India</item>
        <item>Pakistan</item>
        <item>China</item>
        <item>USA</item>
        <item>UK</item>
    </string-array>
</resources>